# agrimind

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/agent/: checkpointer.py  graph.py  guardrail.py  state.py
backend/app/agent/rag/: local_rag.py  web_search.py
backend/app/agent/skills/: fertilizer.py  market_trend.py  pest_expert.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: chat.py  knowledge.py  sessions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: session.py
backend/app/schemas/: chat.py  knowledge.py  session.py
backend/app/services/: __init__.py  session_service.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.ts
frontend/src/assets/: main.css  markdown.css
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: ChatBubble.vue  ChatInput.vue  Sidebar.vue  SkillCard.vue
frontend/src/composables/: useApi.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts
frontend/src/views/: KnowledgeView.vue  WorkspaceView.vue
